fixed problem when progress bar is too long

--- a/app/assets/stylesheets/table/geocoding/geocoder_stats.css.scss
+++ b/app/assets/stylesheets/table/geocoding/geocoder_stats.css.scss
@@ -27,6 +27,7 @@
       margin-top:9px;
       @include border-radius(8px);
       background:#E2E2E2;
+      overflow:hidden;
 
       span.used {
         display:block;
